chore: revert token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - run: bun run build
         shell: bash
 
-      - run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.GITHUB_TOKEN }}
+      - run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
         shell: bash
 
       - run: bun run release
